--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ a {
 .main_visual {
   height: 600px;
   width: 100%;
-  background: url(../img/main_visual.png) no-repeat center center/cover;
+  background: url(main_visual.png) no-repeat center center/cover;
   position: relative;
   margin-top: 100px;
 }
@@ -484,7 +484,7 @@ a {
           transform: translateY(-50%);
   width: 7px;
   height: 11px;
-  background: url(../img/news-arrow@2x.png) no-repeat center center/contain;
+  background: url(news-arrow@2x.png) no-repeat center center/contain;
 }
 
 .news_more a:hover {
@@ -690,7 +690,7 @@ a {
           transform: translateY(-50%);
   width: 17px;
   height: 16px;
-  background: url(../img/button-arrow@2x.png) no-repeat center center/contain;
+  background: url(img/button-arrow@2x.png) no-repeat center center/contain;
 }
 
 .access_button a:hover {
@@ -833,7 +833,7 @@ select {
   -webkit-box-shadow: none;
           box-shadow: none;
   border: 1px solid #707070;
-  background: #fff url(../img/select-arrow@2x.png) no-repeat right 12px center/17px 14px;
+  background: #fff url(img/select-arrow@2x.png) no-repeat right 12px center/17px 14px;
   padding: 12px 16px;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -966,7 +966,7 @@ textarea {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   left: 0;
-  background: transparent url(../img/check@2x.png) no-repeat center center/contain;
+  background: transparent url(img/check@2x.png) no-repeat center center/contain;
   display: none;
 }
 
@@ -990,7 +990,7 @@ textarea {
 }
 
 .contact-from_button [type="submit"] {
-  background: #3F51B5 url(../img/button-arrow@2x.png) no-repeat right 12px center/17px 16px;
+  background: #3F51B5 url(img/button-arrow@2x.png) no-repeat right 12px center/17px 16px;
   width: 304px;
   display: inline-block;
   font-weight: 700;
