--- a/style.css
+++ b/style.css
@@ -690,7 +690,7 @@ a {
           transform: translateY(-50%);
   width: 17px;
   height: 16px;
-  background: url(img/button-arrow@2x.png) no-repeat center center/contain;
+  background: url(button-arrow@2x.png) no-repeat center center/contain;
 }
 
 .access_button a:hover {
@@ -833,7 +833,7 @@ select {
   -webkit-box-shadow: none;
           box-shadow: none;
   border: 1px solid #707070;
-  background: #fff url(img/select-arrow@2x.png) no-repeat right 12px center/17px 14px;
+  background: #fff url(select-arrow@2x.png) no-repeat right 12px center/17px 14px;
   padding: 12px 16px;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -966,12 +966,8 @@ textarea {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   left: 0;
-  background: transparent url(img/check@2x.png) no-repeat center center/contain;
+  background: transparent url(check@2x.png) no-repeat center center/contain;
   display: none;
-}
-
-.contact-from_check span [type="checkbox"]:checked + span::after {
-  display: block;
 }
 
 .contact-from_check span a {
@@ -984,13 +980,17 @@ textarea {
   opacity: 0.7;
 }
 
+.contact-from_check [type="checkbox"]:checked + span::after {
+  display: block;
+}
+
 .contact-from_button {
   margin-top: 30px;
   text-align: center;
 }
 
 .contact-from_button [type="submit"] {
-  background: #3F51B5 url(img/button-arrow@2x.png) no-repeat right 12px center/17px 16px;
+  background: #3F51B5 url(button-arrow@2x.png) no-repeat right 12px center/17px 16px;
   width: 304px;
   display: inline-block;
   font-weight: 700;
